# game-generators

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  examples.py  pyproject.toml
continuous/: discretize.py
functions/: utility.py
gage/functions/: __init__.py  ces.py  cobb_douglas.py  concave.py  interpolate.py  leontief.py  linear.py  monotonic.py  polynomial.py
gage/multi_objective/: __init__.py  from_nfg.py  identity.py
gage/nfg/: __init__.py  bach_stravinsky.py  battle_of_the_sexes.py  bertrand_oligopoly.py  chicken.py  congestion.py  covariant.py  generate_nfg.py  grab_the_dollar.py  hawk_dove.py  potential.py  war_of_attrition.py  zero_sum.py
gage/utils/: data.py  payoffs.py  transforms.py  visualisation.py
game_generators/: __init__.py
game_generators/functions/: __init__.py  concave.py  interpolate.py  leontief.py  linear.py  monotonic.py
game_generators/multi_objective/: __init__.py  from_nfg.py
game_generators/nfg/: __init__.py  bach_stravinsky.py  bertrand_oligopoly.py  chicken.py  covariant.py  discrete_uniform.py  grab_the_dollar.py  hawk_dove.py  potential.py
game_generators/utils/: data.py  generators.py  visualisation.py
multi_objective/: generate_monfg.py
nfg/: battle_of_the_sexes.py  bertrand_oligopoly.py  chicken.py  covariant.py  discrete_uniform.py  generate_nfg.py  hawk_dove.py  majority_voting.py  random_uniform.py  zero_sum.py
tests/test_functions/: test_concave_table.py  test_interpolate.py  test_monotonic_table.py
tests/test_multi_objective/: test_identity.py
utils/: data.py
(+11 files in other folders)
